--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                     <div class="wrapper d-flex justify-content-center">
 
                         <img src="./Images/batman_90804.svg" class="rounded mx-auto d-block img-fluid"
-                            id="final_page_p_img" style="min-width: 0.5rem; min-height: 0.5rem;" alt="...">
+                            id="final_page_p_img" alt="...">
                     </div>
                     <div class="container">
                         <h2 class="text-center" id="final_page_username"></h2>
