--- a/hey.html
+++ b/hey.html
@@ -26,22 +26,13 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <div class="our-team">
                     <div class="picture">
-                        <img class="img-fluid" id="recom_1_img">
+                        <img class="img-fluid" id="recom_1_img" src="">
                     </div>
                     <div class="team-content">
-                        <h3 class="name" id="recom_1_username"></h3>
+                        <h3 class="name" id="recom_1_username">hey</h3>
 
                     </div>
-                    <ul class="social">
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin"
-                                aria-hidden="true"></a></li>
-                    </ul>
+
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
