--- a/hey.html
+++ b/hey.html
@@ -20,8 +20,9 @@
 
 
 
-
     <div class="container">
+
+        <h1 class="text-center text-black">Your Recommendations </h1>
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <div class="our-team">
@@ -30,7 +31,9 @@
                     </div>
                     <div class="team-content">
                         <h3 class="name" id="recom_1_username">hey</h3>
-
+                        <ul class="social">
+                            <h3 class="text-white">hey</h3>
+                        </ul>
                     </div>
 
                 </div>
@@ -45,14 +48,7 @@
 
                     </div>
                     <ul class="social">
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin"
-                                aria-hidden="true"></a></li>
+                        <h3 class="text-white">hey</h3>
                     </ul>
                 </div>
             </div>
@@ -66,14 +62,7 @@
 
                     </div>
                     <ul class="social">
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus"
-                                aria-hidden="true"></a></li>
-                        <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin"
-                                aria-hidden="true"></a></li>
+                        <h3 class="text-white">hey</h3>
                     </ul>
                 </div>
             </div>
