--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label text-white">Insta Handle</label>
-                            <input type="text" class="form-control text-center" id="exampleInputEmail1"
+                            <input type="text" class="form-control text-center" id="insta_id"
                                 aria-describedby="emailHelp" />
                             <div id="emailHelp" class="form-text text-white">
                                 We'll never share your handle with anyone else.
