--- a/hey.html
+++ b/hey.html
@@ -32,7 +32,7 @@
                     <div class="team-content">
                         <h3 class="name" id="recom_1_username">hey</h3>
                         <ul class="social">
-                            <h3 class="text-white">hey</h3>
+                            <h3 class="text-white"></h3>
                         </ul>
                     </div>
 
@@ -48,7 +48,7 @@
 
                     </div>
                     <ul class="social">
-                        <h3 class="text-white">hey</h3>
+                        <h3 class="text-white"></h3>
                     </ul>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 
                     </div>
                     <ul class="social">
-                        <h3 class="text-white">hey</h3>
+                        <h3 class="text-white"></h3>
                     </ul>
                 </div>
             </div>
